@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>net.mantucon.baracus</groupId>
+    <groupId>org.baracus</groupId>
     <artifactId>baracus-framework</artifactId>
     <version>0.7-SNAPSHOT</version>
     <packaging>apklib</packaging>
@@ -10,7 +10,7 @@
     <name>baracus-framework</name>
     <description>The BARACUS Framework for lightweight DI, ORM and other cool stuff for Your Android application
     </description>
-    <url>http://maven.apache.org</url>
+    <url>http://www.baracus.org</url>
 
     <properties>
         <platform.version>4.0.1.2</platform.version>
@@ -24,6 +24,12 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+
+    <scm>
+        <connection>https://github.com/gorefest/baracus-framework</connection>
+        <url>https://github.com/gorefest/baracus-framework</url>
+    </scm>
+
 
     <dependencies>
         <dependency>
